# plugin_manager

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: find_dependencies.cmake
cmake/abandon/: find_dependencies_window.cmake
cmake/local_lib/: find_eigen.cmake  find_fmt.cmake  find_glad.cmake  find_glfw.cmake  find_glm.cmake  find_imgui.cmake  find_minizip_ng.cmake  find_nativefiledialog_extended.cmake  find_portable_file_dialogs.cmake  find_stb.cmake
data/packet/105/: 105.ss_plugin
data/zip/linux/: minigzip  minizip
example/example1_load_plugin/: CMakeLists.txt  main.cxx  plugin_loader.cxx  plugin_loader.hpp
plugin_manager/: CMakeLists.txt
plugin_manager/include/plugin_manager/: export_def.hpp  plugin.hpp  plugin_encryption.hpp  plugin_loader.hpp  plugin_manager.hpp  plugin_pack.hpp
plugin_manager/src/: locale.cxx  locale.hpp  plugin_encryption.cxx  plugin_loader.cxx  plugin_manager.cxx  plugin_pack.cxx
plugin_test/: CMakeLists.txt
plugin_test/plugin_101/node/: CMakeLists.txt
plugin_test/plugin_101/node/include/: plugin_export.hpp
plugin_test/plugin_101/node/src/: plugin_export.cxx
plugin_test/plugin_101/node_ui/: CMakeLists.txt
plugin_test/plugin_101/node_ui/src/: plugin_export.cxx
plugin_test/plugin_102/node/: CMakeLists.txt
plugin_test/plugin_102/node_ui/: CMakeLists.txt
plugin_test/plugin_102/node_ui/src/: node.cxx  plugin_export.cxx
plugin_test/plugin_103/node/: CMakeLists.txt
plugin_test/plugin_103/node/src/: global_data.cxx  global_data.hpp  node.cxx  plugin_export.cxx
plugin_test/plugin_103/node_ui/: CMakeLists.txt
plugin_test/plugin_103/node_ui/include/: node.hpp  plugin_export.hpp
plugin_test/plugin_104/node/: CMakeLists.txt
plugin_test/plugin_104/node/include/: node.hpp
plugin_test/plugin_104/node/src/: node.cxx  plugin_export.cxx
plugin_test/plugin_104/node_ui/: CMakeLists.txt
plugin_test/plugin_104/node_ui/src/: node.cxx  plugin_export.cxx
tutorials/: CMakeLists.txt
tutorials/tutorials_101_load_plugin/: CMakeLists.txt  main.cxx
tutorials/tutorials_102_load_plugin/: CMakeLists.txt  main.cxx
tutorials/tutorials_103_global_data/: CMakeLists.txt  main.cxx
tutorials/tutorials_104_dll_dir/: CMakeLists.txt  main.cxx
tutorials/tutorials_105_encryption_decryption/: CMakeLists.txt  main.cxx  timer.hpp
tutorials/tutorials_106_packet/: CMakeLists.txt  main.cxx
tutorials/tutorials_107_manager/: CMakeLists.txt  main.cxx
