add_subdirectory(tutorials_101_load_plugin)
add_subdirectory(tutorials_102_load_plugin)
add_subdirectory(tutorials_103_global_data)
add_subdirectory(tutorials_104_dll_dir)
add_subdirectory(tutorials_105_encryption_decryption)
add_subdirectory(tutorials_106_packet)
add_subdirectory(tutorials_107_manager)
