cmake_minimum_required(VERSION 3.8)

project("example1_load_plugin")

#################################################################################
# 设置C++编译器选项
#################################################################################

#################################################################################
# 第三方库
#################################################################################

#################################################################################
# 系统参数
#################################################################################
include_directories(${CMAKE_SOURCE_DIR})

#################################################################################
# 添加工程路径
#################################################################################

set(PROJECT_SOURCES
        main.cxx
        plugin_loader.cxx
        plugin_loader.hpp
)

# 将源代码添加到此项目的可执行文件。
add_executable(${PROJECT_NAME} ${PROJECT_SOURCES})
target_link_libraries(
        ${PROJECT_NAME}
        ${Boost_LIBRARIES}
)

####################################################################################################
# 安装
####################################################################################################
