cmake_minimum_required(VERSION 3.8)

project("tutorials_107_manager")

#################################################################################
# 设置C++编译器选项
#################################################################################

#################################################################################
# 第三方库
#################################################################################

include_directories(${CMAKE_SOURCE_DIR}/3rdparty/minizip-ng/include)
link_directories(${CMAKE_SOURCE_DIR}/3rdparty/minizip-ng/lib)


#################################################################################
# 系统参数
#################################################################################
include_directories(${CMAKE_SOURCE_DIR})
include_directories(${CMAKE_SOURCE_DIR}/plugin_manager/include)
add_definitions(-DDATA_DIR="${CMAKE_SOURCE_DIR}/data")

#################################################################################
# 添加工程路径
#################################################################################

set(PROJECT_SOURCES
        main.cxx
        timer.hpp
)

# 将源代码添加到此项目的可执行文件。
add_executable(${PROJECT_NAME} ${PROJECT_SOURCES})
target_link_libraries(
        ${PROJECT_NAME}
        ${Boost_LIBRARIES}
        plugin_manager
)

####################################################################################################
# 安装
####################################################################################################
